[package]
name = "serde_json"
version = "0.8.6"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A JSON serialization file format"
repository = "https://github.com/serde-rs/json"
documentation = "http://docs.serde.rs/serde_json/"
readme = "../README.md"
keywords = ["json", "serde", "serialization"]

[features]
unstable-testing = ["clippy"]
preserve_order = ["linked-hash-map", "linked-hash-map/serde_impl"]

[dependencies]
serde = "0.8.13"
num-traits = "~0.1.32"
clippy = { version = "^0.*", optional = true }
linked-hash-map = { version = "0.3", optional = true }
itoa = "0.1"
dtoa = "0.2"
