[package]
name = "serde_json"
version = "0.9.9"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A JSON serialization file format"
repository = "https://github.com/serde-rs/json"
documentation = "http://docs.serde.rs/serde_json/"
keywords = ["json", "serde", "serialization"]
categories = ["encoding"]
readme = "../README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
publish = false # this branch contains breaking changes

[badges]
travis-ci = { repository = "serde-rs/json" }

[features]
preserve_order = ["linked-hash-map"]

[dependencies]
serde = { git = "https://github.com/serde-rs/serde", branch = "1.0" }
num-traits = "0.1.32"
linked-hash-map = { version = "0.4.1", optional = true }
itoa = "0.3"
dtoa = "0.4"

[dev-dependencies]
serde_bytes = { git = "https://github.com/serde-rs/bytes", branch = "1.0" }
serde_derive = { git = "https://github.com/serde-rs/serde", branch = "1.0" }
