[package]
name = "serde_json_tests"
version = "0.0.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
publish = false

[features]
arbitrary_precision = ["serde_json/arbitrary_precision"]
trace-macros = []

[dependencies]
serde = "0.9"
serde_json = { path = "../json" }
serde_derive = "0.9"

[[test]]
name = "test"
path = "tests/test.rs"
