[package]
name = "serde_json_tests"
version = "0.0.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
publish = false

[features]
trace-macros = []
unstable-testing = ["compiletest_rs"]

[dev-dependencies]
#serde = "0.9.11"
serde_json = { path = "../json" }
#serde_derive = "0.9"

serde = { path = "../../serde/serde" }
serde_derive = { path = "../../serde/serde_derive" }

[dependencies]
compiletest_rs = { version = "0.2", optional = true }
