[package]
name = "serde_json_tests"
version = "0.0.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
publish = false

[features]
trace-macros = []
unstable-testing = ["compiletest_rs"]

[dev-dependencies]
serde = { git = "https://github.com/serde-rs/serde", branch = "1.0" }
serde_json = { path = "../json" }
serde_derive = { git = "https://github.com/serde-rs/serde", branch = "1.0" }

[dependencies]
compiletest_rs = { version = "0.2", optional = true }
