[package]
name = "sciformats_serde_json_test"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "test.rs"

[dependencies]
sciformats_serde_json = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["sciformats_serde_json/std"]
alloc = ["sciformats_serde_json/alloc"]
#preserve_order = ["sciformats_serde_json/preserve_order"]
float_roundtrip = ["sciformats_serde_json/float_roundtrip"]
arbitrary_precision = ["sciformats_serde_json/arbitrary_precision"]
raw_value = ["sciformats_serde_json/raw_value"]
unbounded_depth = ["sciformats_serde_json/unbounded_depth"]
